--- a/css/style.css
+++ b/css/style.css
@@ -19,42 +19,55 @@
     font-style: normal;
     font-weight: 700;
 }
-@font-face {
-    font-family: CircularStd;
-    src: url("../fonts/CircularStd-Black.woff2") format("woff2"), url("../fonts/CircularStd-Black.woff") format("woff");
-    font-style: normal;
-    font-weight: 900;
+
+.wrapper{
+   	min-height: 100%;
+	   overflow: hidden;
 }
 
+body{
+	 font-family: "CircularStd";
+	 font-weight: 400;
+    font-size: 18px;
+    line-height: 156%;
+    list-style: normal;
+}
+
+
 main{
- max-width: 1025px;
-margin-top: 100px ;
-margin-left: 207px;
-/* background-color: aqua; */
+    max-width: 1025px;
+    margin-top: 100px ;
+    margin-left: 207px;
+
 
 }
 h2{
     font-family: "CircularStd";
-font-weight: 900;
-   text-align: center;
-margin-bottom: 20px;
-font-style: normal;
-font-size: 65px;
-line-height: 82px;
-text-align: center;
-color: #313131;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 20px;
+    font-style: normal;
+    font-size: 65px;
+    line-height: 82px;
+    text-align: center;
+    color: #313131;
 
 }
 .main-2{
-    
+    display: inline-block;
+	 margin-left: 145px;
     max-width: 750px;
- text-align: center;
+	 font-size: 20px;
+	 line-height: 25px;
+    text-align: center;
+
 }
 .main-3{
 max-width: 508px;
 margin-top: 224px;
 }
 .main-3-1{
+	display: inline-block;
 margin-bottom: 20px;
 font-family: "CircularStd";
 font-size: 34px;
@@ -66,47 +79,36 @@ text-align: left;
 .main-3-2{
 margin-bottom: 60px;
 font-family: "CircularStd";
-font-size: 18px;
 font-style: normal;
-font-weight: 400;
-line-height: 28px;
 text-align: left;
+} 
 
-
-}
-.main-3-3{
-background-color: blueviolet;
-}
 .main-3-3-1{
-margin-bottom: 40px;
-display: flex;
-letter-spacing: 50px;
-}
-.main-3-3-2{
+	max-width: 145px;
+	margin-bottom: 40px;
 }
 .main-3-3-2-1{
 margin-bottom: 5px;
 font-family: Circular Std;
-font-size: 18px;
 font-style: normal;
 font-weight: 700;
-line-height: 23px;
+line-height: 23.4px;
 text-align: left;
 
 }
 .main-3-3-2-2{
 font-family: Circular Std;
-font-size: 18px;
 font-style: normal;
-font-weight: 400;
-line-height: 23px;
+line-height: 22.77px;
 text-align: left;
-
-
-.main-4{}
-
+color: #B8B8B8;
 }
-footer{
-    width: 100px;
-    height: 100px;
+.main-4{
+	overflow: inherit;
+	margin-top: 10px;
+	max-width: 468px;
+	text-align: center;
+	background-image: url(../img/Rectangle.png);
+	background-position: bottom;
+	background-repeat: no-repeat;  
 }
